⛵  Add menu to reach saved addresses and show empty state (#19771)
* 💚 Enable wallet on header navigation

- Add settings screen
- Add save address settings screen
- Need to add empty state next

* 🥡 Added empty state for saved-addresses

- Fixed the standard title quo component
- It's flex behaviour was buggy, and it's not being used anywhere

* 🧂PR fixes and lint

- Use callback everywhere

* 🗞️ Move wallet settings to wallet namespace

--- a/translations/en.json
+++ b/translations/en.json
@@ -2407,6 +2407,7 @@
     "saved": "Saved",
     "no-recent-transactions": "No recent transactions",
     "make-one-it-is-easy-we-promise": "Make one, it’s easy, we promise!",
+    "saved-addresses": "Saved addresses",
     "no-saved-addresses": "No saved addresses",
     "you-like-to-type-43-characters": "You like to type 43 characters?",
     "no-other-accounts": "No other accounts",
@@ -2462,6 +2463,7 @@
     "address-no-activity": "This address has no activity",
     "scanning": "Scanning for activity...",
     "keypairs": "Keypairs",
+    "keypairs-accounts-and-addresses": "Keypairs, accounts and addresses",
     "keypairs-description": "Select keypair to derive your new account from",
     "confirm-account-origin": "Confirm account origin",
     "confirmed-on": "Confirmed on",
