Add pairing/unpairing of devices (#19692)
* feat: added pairing/unpairing of synced devices

* feat: remove flatlists & add confirmation/toast

--- a/translations/en.json
+++ b/translations/en.json
@@ -1118,6 +1118,7 @@
     "own-your-crypto": "Own your crypto",
     "pair": "Pair",
     "pair-devices": "Pair devices",
+    "pair-device-toast": "Device successfully paired",
     "pair-card": "Pair to this device",
     "pair-code": "Pair code",
     "pair-code-explanation": "Pairs card to a different device (up to 5) to unlock keys and sign transactions with the same Keycard",
@@ -1476,6 +1477,9 @@
     "unpair": "Unpair",
     "unpair-card": "Unpair card",
     "unpair-card-confirmation": "This operation will unpair card from current device. Requires 6-digit passcode authorization. Do you want to proceed?",
+    "unpair-device": "Unpair device?",
+    "unpair-device-description": "This device will no longer synchronize with {{name}} until you pair them again.",
+    "unpair-device-toast": "Device successfully unpaired",
     "unpaired-keycard-text": "The Keycard you tapped is not associated with this phone",
     "unpaired-keycard-title": "Looks like your card has been unpaired",
     "unpair-keycard": "Unpair Keycard from this phone",
