Implement network settings for wallet settings (#19995)
* fix: resolve warning about using subscription inside a lazy seq

* fix: avoid schema error when we do not have a port for the media server

* chore: add feature-flag for network-settings inside wallet-settings

* chore: add testnet mode label

* chore: add testnet labels for bottom-sheets

* chore: add label for changing testnet mode

* feature: add initial network-settings screen to wallet-settings

* test: add test for sub

* tidy: rename function to hide-bottom-sheet

* tweak: add info-box for testnet mode

* tidy: testnet-mode bottom-sheet

* tidy: use reduce-kv instead of map & into

* tidy: use noun naming convention for function creating options for settings

* tweak: add support for displaying testnet-mode status on each wallet network

* chore: add translation for labels referencing testnet-mode and sepolia

--- a/translations/en.json
+++ b/translations/en.json
@@ -2307,6 +2307,7 @@
     "sync-devices-complete-sub-title": "Your devices are now in sync",
     "synced-with": "Synced with",
     "confirm-and-leave": "Confirm and leave",
+    "change-testnet-mode-logout-info": "You’ll be logged out of the app",
     "membership-requirements-not-met": "Membership requirements not met",
     "edit-shared-addresses": "Edit shared addresses",
     "leave-community-farewell": "We’ll be sad to see you go but remember, you can come back at any time! All shared addresses will be unshared.",
@@ -2573,6 +2574,8 @@
     "keypair-name-input-placeholder": "Collectibles account, Old vault....",
     "key-pair-name-updated": "Key pair name updated",
     "goerli-testnet-toggle-confirmation": "Are you sure you want to toggle Goerli? This will log you out and you will have to login again.",
+    "sepolia-active": "Sepolia active",
+    "testnet-not-available": "Testnet not available",
     "bridged-to": "Bridged to {{network}}",
     "slide-to-bridge": "Slide to bridge",
     "provider-is-down": "The provider for the following chain(s) is down: {{chains}}",
@@ -2599,6 +2602,11 @@
     "key-name-error-special-char": "Special characters are not allowed",
     "key-name-error-too-short": "Key pair name must be at least {{count}} characters",
     "display": "Display",
+    "testnet-mode": "Testnet mode",
+    "turn-on-testnet-mode": "Turn on testnet mode",
+    "turn-off-testnet-mode": "Turn off testnet mode",
+    "testnet-mode-enable-description": "In this mode, all blockchain data displayed will come from testnets and all blockchain interactions will be with testnets.\nTestnet mode switches the entire app to using testnets only. Please switch this mode on only if you know exactly why you need to use it.",
+    "testnet-mode-disable-description": "Are you sure you want to turn off Testnet mode? All future transactions will be performed on live networks with real funds.",
     "testnet-mode-enabled": "Testnet mode enabled",
     "online-community-member": "Online",
     "offline-community-member": "Offline",
