Hide empty categories and categories that include only hidden channels

--- a/translations/en.json
+++ b/translations/en.json
@@ -268,6 +268,7 @@
     "community-color": "Community colour",
     "community-link": "Community link",
     "community-color-placeholder": "Pick a colour",
+    "community-overview": "Community Overview",
     "membership-button": "Membership requirement",
     "membership-none": "None",
     "membership-none-placeholder": "You can require new members to meet certain criteria before they can join. This can be changed at any time",
@@ -1565,6 +1566,7 @@
     "with-full-encryption": "With full metadata privacy and e2e encryption",
     "fetch-community": "Fetch community",
     "fetching-community": "Fetching community...",
+    "failed-to-fetch-community": "Failed to fetch community",
     "seed-phrase-placeholder": "Type or paste your recovery phrase",
     "seed-phrase-words-exceeded": "Recovery phrase cannot exceed 24 words",
     "seed-phrase-words-uppercase": "Recovery phrase cannot contain uppercase characters",
