--- a/translations/en.json
+++ b/translations/en.json
@@ -524,6 +524,8 @@
     "enable": "Enable",
     "enable-notifications-sub-title": "Receive notifications about your new messages or wallet transactions",
     "encrypt-with-password": "Encrypt with password",
+    "encrypted-key-pairs": "Encrypted key pairs",
+    "encrypted-key-pairs-code": "Encrypted key pairs code",
     "ending-not-allowed": "{{ending}} ending is not allowed",
     "ends-with-space": "Cannot end with space",
     "ens-10-SNT": "10 SNT",
@@ -939,6 +941,7 @@
     "main-wallet": "Main Wallet",
     "make-admin": "Make admin",
     "make-moderator": "Make moderator",
+    "make-sure-no-camera-warning": "Make sure no camera or person can see this screen before revealing",
     "manage-keys-and-storage": "Manage keys and storage",
     "mark-as-read": "Mark as read",
     "mark-all-read": "Mark all read",
@@ -1272,6 +1275,7 @@
     "reset-card-description": "This operation will reset card to initial state. It will erase all card data including private keys. Operation is not reversible.",
     "retry": "Retry",
     "reveal-sync-code": "Reveal sync code",
+    "reveal-qr-code": "Reveal QR code",
     "revoke-access": "Revoke access",
     "save": "Save",
     "save-address": "Save address",
@@ -1337,6 +1341,7 @@
     "show-more": "Show more",
     "show-qr": "Show QR code",
     "show-transaction-data": "Show transaction data",
+    "show-encrypted-qr-of-key-pairs": "Show encrypted QR of key pairs on device",
     "sign-and-send": "Sign and send",
     "sign-in": "Sign in",
     "sign-message": "Sign Message",
@@ -1970,6 +1975,7 @@
     "slide-to-request-to-join": "Slide to request to join",
     "slide-to-reveal-code": "Slide to reveal code",
     "slide-to-create-account": "Slide to create account",
+    "slide-to-reveal-qr-code": "Slide to reveal QR code",
     "minimum-received": "Minimum received",
     "powered-by-paraswap": "Powered by Paraswap",
     "priority": "Priority",
