--- a/translations/en.json
+++ b/translations/en.json
@@ -1991,6 +1991,9 @@
     "approve-token-contract-desc": "Approving a token with a contract allows it to spend your token balance. If you feel that a project is untrustworthy, don’t approve the token with them, or approve only the amount you will use with them.",
     "unlimited": "Unlimited",
     "approve": "Approve",
+    "approve-amount-symbol": "Approve {{amount}} {{symbol}}",
+    "approving-amount-symbol": "Approving {{amount}} {{symbol}}...",
+    "approved-amount-symbol": "Approved {{amount}} {{symbol}}",
     "limit": "Limit",
     "last-transaction": "Last transaction",
     "price-impact-desc": "Estimated price impact for this transaction. If the current block base fee exceeds this, your transaction will be included in a following block with a lower base fee.",
