--- a/translations/en.json
+++ b/translations/en.json
@@ -2401,6 +2401,7 @@
     "empty-tab-description": "C'mon do something...",
     "buy": "Buy",
     "bridge": "Bridge",
+    "bridge-from": "Bridge from {{bridge-name}}",
     "bridge-to": "Bridge {{name}} to",
     "on-device": "On device",
     "on-keycard": "On Keycard",
