[#19921] feat: remove key pair action (#20002)

--- a/translations/en.json
+++ b/translations/en.json
@@ -1259,6 +1259,8 @@
     "remove-network": "Remove network",
     "remove-token": "Remove token",
     "removed": "removed",
+    "remove-key-pair-and-derived-accounts": "Remove key pair and derived accounts",
+    "the-key-pair-and-derived-accounts-will-be-removed": "The key pair and derived accounts will be removed from all of your synced devices. Make sure you have a backup of your keys or seed phrase before proceeding.",
     "rename-key-pair": "Rename key pair",
     "repeat-pin": "Repeat new 6-digit passcode",
     "repeat-puk": "Repeat new 12-digit PUK",
@@ -1975,6 +1977,7 @@
     "slide-to-request-to-join": "Slide to request to join",
     "slide-to-reveal-code": "Slide to reveal code",
     "slide-to-create-account": "Slide to create account",
+    "slide-to-remove-key-pair": "Slide to remove key pair",
     "slide-to-reveal-qr-code": "Slide to reveal QR code",
     "minimum-received": "Minimum received",
     "powered-by-paraswap": "Powered by Paraswap",
@@ -2581,6 +2584,7 @@
     "keypair-name-description": "Name key pair for your own personal reference",
     "keypair-name-input-placeholder": "Collectibles account, Old vault....",
     "key-pair-name-updated": "Key pair name updated",
+    "key-pair-removed": "Key pair and derived accounts has been removed",
     "goerli-testnet-toggle-confirmation": "Are you sure you want to toggle Goerli? This will log you out and you will have to login again.",
     "sepolia-active": "Sepolia active",
     "testnet-not-available": "Testnet not available",
