--- a/translations/en.json
+++ b/translations/en.json
@@ -1292,6 +1292,7 @@
     "scan-qr": "Scan QR",
     "scan-qr-code": "Scan QR code",
     "scan-with-status-app": "Scan with the Status app on another device",
+    "scan-key-pairs-qr-code": "Scan key pairs QR code",
     "invalid-qr": "Oops! This QR doesn’t work with Status",
     "search": "Search",
     "search-discover-communities": "Search communities or categories",
@@ -2213,6 +2214,7 @@
     "create-new-profile": "Create new profile",
     "add-existing-status-profile": "Add existing Status profile",
     "find-sync-code": "Find sync code",
+    "find-it-in-setting": "Find it in Settings on your other synced device",
     "sign-in-by-syncing": "Sign in by syncing",
     "synchronise-your-data-across-your-devices": "Synchronise your data across your devices",
     "scan-sync-qr-code": "Scan QR code",
@@ -2452,6 +2454,8 @@
     "no-other-accounts": "No other accounts",
     "here-is-a-cat-in-a-box-instead": "Here’s a cat in a box instead",
     "accounts-count": "{{count}} accounts",
+    "key-pairs-successfully-imported": "{{count}} key pairs successfully imported",
+    "key-pair-imported-successfully": "{{name}} key pair imported successfully",
     "n-m-people": "{{n}}/{{m}} people",
     "enter-eth": "Enter any ETH address or ENS name.",
     "eth-or-ens": "ETH address or ENS name.",
