--- a/translations/en.json
+++ b/translations/en.json
@@ -1049,7 +1049,6 @@
     "language-and-currency": "Language and currency",
     "opening-buy-crypto": "Opening {{site}}...",
     "network": "Network",
-    "networks": "Networks",
     "network-chain": "Network chain",
     "network-fee": "Network fee",
     "network-id": "Network ID",
@@ -2674,10 +2673,5 @@
     "saved-address-removed": "Saved address removed",
     "remove-address": "Remove address",
     "remove-saved-address": "Remove saved address",
-    "remove-saved-address-description": "Transaction history relating to this address will no longer be labelled ‘{{name}}’.",
-    "dapp-will-be-able-to": "{{dapp-name}} will be able to:",
-    "check-your-account-balance-and-activity": "Check your account balance and activity",
-    "request-txns-and-message-signing": "Request transactions and message signing",
-    "wallet-connect-qr-expired": "WalletConnect QR has expired",
-    "wallet-connect-version-not-supported": "WalletConnect version {{version}} is not supported"
+    "remove-saved-address-description": "Transaction history relating to this address will no longer be labelled ‘{{name}}’."
 }
