🤝 🔁 [19834] Add dapp connection flow with a basic design (#20204) (#20325)
* 🔳 QR on success not being called

- IDK why, trying things out

* 🙃 Stupid of me

- My handler was not being called because I wrote the code in a
different QR scanner

* ✅ Approval screen taking shape

* 🧹 Lint fix

* 🎛️ Wallet connect session screen shows up

- Hard coded the first account
- The data item component doesn't support networks or accounts yet
- The quo category component cannot show a data-item yet
- Connected accept and decline button

* 🧰 Fix review issues

* 🔨 Fix lint

* 🔧 Rename event and move dispatch

* 🔧 Fix lint

* 🎏 Add ff for wc scanner

- Bring back missing event

--- a/translations/en.json
+++ b/translations/en.json
@@ -1049,6 +1049,7 @@
     "language-and-currency": "Language and currency",
     "opening-buy-crypto": "Opening {{site}}...",
     "network": "Network",
+    "networks": "Networks",
     "network-chain": "Network chain",
     "network-fee": "Network fee",
     "network-id": "Network ID",
@@ -2682,5 +2683,10 @@
     "you-cannot-add-your-own-account-as-a-saved-address": "You cannot add your own account as a saved address",
     "this-address-is-already-saved": "This address is already saved",
     "this-ens-name-is-not-registered-yet": "This ENS name is not registered yet",
-    "address-saved": "Address saved"
+    "address-saved": "Address saved",
+    "dapp-will-be-able-to": "{{dapp-name}} will be able to:",
+    "check-your-account-balance-and-activity": "Check your account balance and activity",
+    "request-txns-and-message-signing": "Request transactions and message signing",
+    "wallet-connect-qr-expired": "WalletConnect QR has expired",
+    "wallet-connect-version-not-supported": "WalletConnect version {{version}} is not supported"
 }
