--- a/translations/en.json
+++ b/translations/en.json
@@ -1021,6 +1021,7 @@
     "enter-recovery-phrase": "Enter recovery phrase",
     "import-key-pair": "Import key pair",
     "import-by-entering-recovery-phrase": "Import by entering recovery phrase",
+    "import-by-entering-private-key": "Import by entering private key",
     "use-recovery-phrase": "Use recovery phrase",
     "use-recovery-phrase-subtitle": "If you already have an Ethereum address",
     "use-keycard": "Use Keycard",
@@ -2656,6 +2657,8 @@
     "amount-missing-keypairs": "{{amount} missing key pairs",
     "import-private-key-info": "New addresses cannot be derived from an account imported from a private key. Import using a seed phrase if you wish to derive addresses.",
     "invalid-private-key": "It’s not a valid private key",
+    "correct-private-key": "Correct private key",
+    "incorrect-private-key": "This is not the private key for {{name}}",
     "private-key-public-address": "Public address of private key",
     "this-account-has-no-activity": "This account has no activity",
     "this-address-has-activity": "This address has activity",
