chore: Revise code for wallet settings (#20439)
* fix: use correct error message when displaying seed phrase as incorrect

* tidy: cleanup naming of events and effects

* tweak: show incorrect-seed-phrase error for any import error

* fix: show correct error message for incorrect private key

* chore: move import-private-key and import-seed-phrase namespaces

* chore: move encrypted-qr namespace

* chore: move scan-qr namespace

* tidy: rename key-pair to keypair inside for wallet settings

* tweak: use :open-modal navigation instead of :navigate-to-within-stack

* tweak: rename screen for importing missing key-pair by seed-phrase

* tidy: refactor code

--- a/translations/en.json
+++ b/translations/en.json
@@ -1587,6 +1587,7 @@
     "seed-phrase-words-uppercase": "Recovery phrase cannot contain uppercase characters",
     "seed-phrase-error": "Recovery phrase contains invalid words",
     "seed-phrase-invalid": "Invalid recovery phrase",
+    "seed-phrase-incorrect": "Recovery phrase does not match key pair",
     "seed-phrase-info": "Enter 12, 18 or 24 words separated by spaces",
     "word-count": "Word count",
     "word-n": "Word #{{number}}",
@@ -2659,7 +2660,7 @@
     "import-private-key-info": "New addresses cannot be derived from an account imported from a private key. Import using a seed phrase if you wish to derive addresses.",
     "invalid-private-key": "It’s not a valid private key",
     "correct-private-key": "Correct private key",
-    "incorrect-private-key": "This is not the private key for {{name}}",
+    "incorrect-private-key": "This is not the private key for this key pair",
     "private-key-public-address": "Public address of private key",
     "this-account-has-no-activity": "This account has no activity",
     "this-address-has-activity": "This address has activity",
