chore(wallet): add missing keypair to wallet home cards (#20455)

--- a/translations/en.json
+++ b/translations/en.json
@@ -2709,5 +2709,8 @@
     "not-enough-assets": "Not enough assets to pay gas fees",
     "send-from-network" : "Send from {{network}}",
     "define-amount-sent-from-network" : "Define amount sent from {{network}} network",
-    "dont-auto-recalculate-network": "Don't auto recalculate {{network}}"
+    "dont-auto-recalculate-network": "Don't auto recalculate {{network}}",
+    "import-keypair-to-use-account": "Import key pair to use this account",
+    "import-keypair-steps": "{{account-name}} was derived from your {{keypair-name}} key pair, which has not yet been imported to this device. To transact using this account, you will need to import the {{keypair-name}} key pair first.",
+    "not-now": "Not now"
 }
