--- a/translations/en.json
+++ b/translations/en.json
@@ -1276,6 +1276,7 @@
     "request-to-join-disclaimer": "Joining the community will reveal your public addresses to the owner",
     "request-to-join": "Request to join",
     "request-to-join-community": "Request to join community",
+    "request-to-join-community-pending": "Request to join community pending",
     "requested-to-join-community": "You requested to join “{{community}}”",
     "request-transaction": "Request transaction",
     "required-field": "Required field",
