--- a/translations/en.json
+++ b/translations/en.json
@@ -719,6 +719,7 @@
     "identicon-ring": "Identicon ring",
     "identicon-ring-explanation": "This multicoloured ring around your profile picture represents your chat key.",
     "if-you-cancel": "If you cancel, you can request to join this community at any point.",
+    "if-you-have-status-on-another-device": "If you have Status on another device",
     "image-remove-current": "Remove current photo",
     "image-source-gallery": "Select from gallery",
     "image-source-make-photo": "Capture",
@@ -1396,6 +1397,7 @@
     "symbol": "Symbol",
     "sync-all-devices": "Sync all devices",
     "sync-in-progress": "Syncing...",
+    "sync-or-recover-profile": "Sync or recover profile",
     "sync-settings": "Sync settings",
     "sync-synced": "In sync",
     "syncing-devices": "Syncing...",
@@ -2361,6 +2363,7 @@
     "read-more": "Read more",
     "token-gated-communities-info": "Here will be something relevant about this topic. This will help the user get more context and therefore have a better understanding of it.",
     "dont-yell-at-me": "Don’t yell at me",
+    "dont-have-statatus-on-another-device": "Don't have Status on another device?",
     "unmute-channel": "Unmute channel",
     "all-messages": "All messages",
     "muted-until": "Muted until {{duration}}",
