--- a/translations/en.json
+++ b/translations/en.json
@@ -1302,6 +1302,8 @@
     "scan-with-status-app": "Scan with the Status app on another device",
     "scan-key-pairs-qr-code": "Scan key pairs QR code",
     "invalid-qr": "Oops! This QR doesn’t work with Status",
+    "invalid-key-pair-qr": "This does not look like a key pair QR code",
+    "incorrect-qr-code": "This is not the QR code you are looking for",
     "search": "Search",
     "search-discover-communities": "Search communities or categories",
     "secret-keys-confirmation-text": "You will need them to continue to use your Keycard in case you ever lose your phone.",
@@ -2639,6 +2641,7 @@
     "max": "Max: {{number}}",
     "your-key-pair-name-is-too-long": "Your key pair name is too long",
     "your-key-pair-name-is-too-short": "Your key pair name is too short",
+    "key-name-error-taken": "Key pair name already in use",
     "key-name-error-length": "Key name too long",
     "key-name-error-emoji": "Emojis are not allowed",
     "key-name-error-special-char": "Special characters are not allowed",
