WC signing/sending transactions flow (#20445)
* WC signing transactions flow

* Fixes

* Fixes

* Post-review fixes

* Removed leftover

* Post-review fixes

* Fixes

* Fixes

* Test fixes

--- a/translations/en.json
+++ b/translations/en.json
@@ -1930,6 +1930,8 @@
     "pinned-by": "Pinned by",
     "pin-limit-reached": "Pin limit reached. Unpin a previous message first.",
     "no-fees": "No fees",
+    "not-enough-assets-to-pay-gas-fees": "Not enough assets to pay gas fees.",
+    "not-enough-assets": "Not enough assets to complete transaction.",
     "max-fee": "Max fee",
     "max-fees": "Max fees",
     "max-priority-fee": "Max priority fee",
@@ -2029,8 +2031,12 @@
     "wallet-connect-go-back": "Go back to your browser or dapp",
     "wallet-connect-2.0": "Wallet Connect 2.0",
     "wallet-connect": "Wallet Connect",
-    "wallet-connect-sign-header": "wants you to sign a message with",
-    "wallet-connect-sign-warning": "Sign messages only if you trust the dApp",
+    "wallet-connect-sign-message-header": "wants you to sign the message with",
+    "wallet-connect-send-transaction-header": "wants you to send this transaction with",
+    "wallet-connect-sign-transaction-header": "wants you to sign this transaction with",
+    "wallet-connect-sign-message-warning": "Sign messages only if you trust the dApp",
+    "wallet-connect-send-transaction-warning": "Send transactions only if you trust the dApp",
+    "wallet-connect-sign-transaction-warning": "Sign transactions only if you trust the dApp",
     "reject": "Reject",
     "manage-connections": "Manage connections from within Application Connections",
     "contact-request-was-ignored": "Contact request ignored",
