Wallet Connect session establish networks (#20576)
* feat: showing supported networks in wc connection

* feat: added :large size for quo/data-item

* feat: added required networks check

--- a/translations/en.json
+++ b/translations/en.json
@@ -214,6 +214,7 @@
     "airdrop-addresses": "Address for airdrops",
     "join-as": "Join as {{role}}",
     "all-addresses": "All addresses",
+    "all-networks": "All networks",
     "for-airdrops": "For airdrops",
     "members-label": "Members",
     "open-membership": "Open membership",
@@ -2043,6 +2044,7 @@
     "wallet-connect-sign-message-warning": "Sign messages only if you trust the dApp",
     "wallet-connect-send-transaction-warning": "Send transactions only if you trust the dApp",
     "wallet-connect-sign-transaction-warning": "Sign transactions only if you trust the dApp",
+    "wallet-connect-networks-not-supported": "{{dapp}} requires an unsupported network.",
     "reject": "Reject",
     "manage-connections": "Manage connections from within Application Connections",
     "contact-request-was-ignored": "Contact request ignored",
