--- a/translations/en.json
+++ b/translations/en.json
@@ -1296,6 +1296,7 @@
     "reveal-qr-code": "Reveal QR code",
     "revoke-access": "Revoke access",
     "save": "Save",
+    "save-changes": "Save changes",
     "save-address": "Save address",
     "save-bio": "Save bio",
     "save-colour": "Save colour",
@@ -1998,6 +1999,13 @@
     "status-inactive-subtitle": "Hides your online status",
     "two-minutes": "two minutes",
     "swap": "Swap",
+    "slippage-settings": "Slippage settings",
+    "slippage-settings-description": "Your transaction will revert if the price changes more than the slippage percentage",
+    "slippage-may-be-higher-than-necessary": "Slippage may be higher than necessary",
+    "slippage-should-be-more-than-0": "Slippage should be more than 0",
+    "max-2-decimals": "Max. 2 decimals",
+    "type-slippage":  "Type slippage",
+    "receive-at-least": "Receive at least",
     "select-token-to-swap": "Select token to Swap",
     "select-token-to-receive": "Select token to receive",
     "slide-to-request-to-join": "Slide to request to join",
