Add confirmation to centralized metrics
This commit add a confirmation for centralized metrics.
It is added in 3 places:

1) Onboarding -> Create new account
2) Onboarding -> Sync profile
3) On the accounts view if the user is upgrading

To test 1 & 2, you should just be able to do that on a newly installed
device.

To test 3, you will have to upgrade from a PR without this feature that
has at least an account. It should show the confirmation modal until you
either click on Not now or Share usage data.

The modal should also be added in settings, but I will do that as a
separate PR.

--- a/translations/en.json
+++ b/translations/en.json
@@ -2765,7 +2765,7 @@
     "ip-address":"IP address",
     "universally-unique-identifiers-of-device":"Universally Unique Identifiers of device",
     "logs-of-actions-withing-the-app":"Logs of actions within the app, including button presses and screen visits",
-    "what-we-not-receive":"What we not receive:",
+    "what-we-wont-receive":"What we won't receive:",
     "your-profile-information":"Your profile information",
     "your-addresses":"Your addresses",
     "information-you-input-and-send":"Information you input and send",
