Allow setting store confirmations
This commit adds the ability to enable store confirmations in the UI,
under advanced settings.

https://github.com/status-im/status-go/compare/1ef2434b...0d1e5aae

--- a/translations/en.json
+++ b/translations/en.json
@@ -2757,5 +2757,6 @@
     "value-higher-than-send-amount": "This value is higher than entered amount to send",
     "swaps-powered-by": "Swaps powered by {{provider}}",
     "max-slippage": "Max slippage",
-    "pay": "Pay"
+    "pay": "Pay",
+    "store-confirmations": "Store confirmations"
 }
