--- a/translations/en.json
+++ b/translations/en.json
@@ -1311,7 +1311,8 @@
     "scan-key-pairs-qr-code": "Scan key pairs QR code",
     "invalid-qr": "Oops! This QR doesn’t work with Status",
     "invalid-key-pair-qr": "This does not look like a key pair QR code",
-    "incorrect-qr-code": "This is not the QR code you are looking for",
+    "this-qr-does-not-contain-key-pair": "This QR does not contain {{name}} key pair",
+    "this-qr-does-not-contain-any-missing-key-pair": "This QR does not contain any missing key pairs",
     "search": "Search",
     "search-discover-communities": "Search communities or categories",
     "secret-keys-confirmation-text": "You will need them to continue to use your Keycard in case you ever lose your phone.",
@@ -1363,7 +1364,7 @@
     "show-more": "Show more",
     "show-qr": "Show QR code",
     "show-transaction-data": "Show transaction data",
-    "show-encrypted-qr-of-key-pairs": "Show encrypted QR of key pairs on device",
+    "show-encrypted-qr-of-key-pair": "Show encrypted QR of key pair",
     "sign-and-send": "Sign and send",
     "sign-in": "Sign in",
     "sign-message": "Sign Message",
