--- a/translations/en.json
+++ b/translations/en.json
@@ -16,6 +16,7 @@
     "added-you-to": "added you to",
     "address-name": "Address name",
     "anyone": "Anyone",
+    "allow-new-contact-requests": "Allow new contact requests",
     "messages-from-contacts-only-subtitle": "Only people you added as contacts can start a new chat with you or invite you to a group",
     "messages-gap-warning": "Some messages might be missing",
     "accept-new-chats-from": "Accept new chats from",
@@ -1093,6 +1094,7 @@
     "node-version": "Node version",
     "nonce": "Nonce",
     "none": "None",
+    "no-one": "No one",
     "not-a-chatkey": "This is not a chatkey",
     "not-applicable": "Not applicable for unsigned transactions",
     "not-keycard-text": "The card you used is not a Keycard. You need to purchase a Keycard to use it",
