Wallet Connect transactions (#20755)
* feat: updated signing endpoints and refactor

https://github.com/status-im/status-go/compare/6e056348...e8aec741

* fix: using the generic warning at the bottom

* fix: show parsed transaction parameters

* feat: adding fees to transactions

https://github.com/status-im/status-go/compare/6e056348...b2e5e7a8

* feat: added fees

* feat: added eip-1559 fee estimation & tx priority

* feat: added fees and failed processing handling

* fix: show testnet name in the request

* fix: address review comments

* feat: added max-fee color when not enough balance

* ref: broke down tx fees subscription

* fix: handle gas estimation on status-go

https://github.com/status-im/status-go/compare/1ef2434b...5389f281

* fix: don't overwrite dynamic fees if already there

* fix: malli schema and review comments

* fix: addressed review comments 1

* fix: addressed comments 2

* fix: removed unused require

* fix: addressed QA review

https://github.com/status-im/status-go/compare/484b8aca...d07f9b5b

* fix: requests being shown simultaneously

* fix: removed support for eth_signTransaction

--- a/translations/en.json
+++ b/translations/en.json
@@ -1941,8 +1941,8 @@
     "pinned-by": "Pinned by",
     "pin-limit-reached": "Pin limit reached. Unpin a previous message first.",
     "no-fees": "No fees",
-    "not-enough-assets-to-pay-gas-fees": "Not enough assets to pay gas fees.",
-    "not-enough-assets": "Not enough assets to complete transaction.",
+    "not-enough-assets-to-pay-gas-fees": "Not enough assets to pay gas fees",
+    "not-enough-assets": "Not enough assets to complete transaction",
     "max-fee": "Max fee",
     "max-fees": "Max fees",
     "max-priority-fee": "Max priority fee",
@@ -2052,6 +2052,7 @@
     "wallet-connect-sign-message-header": "wants you to sign the message with",
     "wallet-connect-send-transaction-header": "wants you to send this transaction with",
     "wallet-connect-sign-transaction-header": "wants you to sign this transaction with",
+    "wallet-connect-sign-warning": "Sign only if you trust the dApp",
     "wallet-connect-sign-message-warning": "Sign messages only if you trust the dApp",
     "wallet-connect-send-transaction-warning": "Send transactions only if you trust the dApp",
     "wallet-connect-sign-transaction-warning": "Sign transactions only if you trust the dApp",
@@ -2746,7 +2747,6 @@
     "saved-address-network-preference-selection-description": "Only change if you know which networks the address owner is happy to to receive funds on",
     "add-preferences": "Add preferences",
     "buy-eth": "Buy ETH",
-    "not-enough-assets": "Not enough assets to pay gas fees",
     "send-from-network": "Send from {{network}}",
     "define-amount-sent-from-network": "Define amount sent from {{network}} network",
     "dont-auto-recalculate-network": "Don't auto recalculate {{network}}",
