--- a/translations/en.json
+++ b/translations/en.json
@@ -18,6 +18,7 @@
   "accepted": "Accepted",
   "access-existing-keys": "Access existing keys",
   "access-key": "Access key",
+  "account": "Account",
   "account-added": "Account added",
   "account-color": "Account color",
   "account-content": "You can compare accounts in Status to bank accounts. Like a bank account, an account typically has an address and a balance; You use this account to transact on Ethereum. You can have multiple accounts in your wallet. All accessed by unlocking Status.",
@@ -1016,6 +1017,7 @@
   "fleet-settings": "Fleet settings",
   "follow": "Follow",
   "follow-your-interests": "Jump into a public chat and meet new people",
+  "for": "for",
   "for-airdrops": "For airdrops",
   "forgot-password": "Forgot password?",
   "forgot-your-password-info-create-new-password": "Create a new password",
@@ -2189,6 +2191,7 @@
   "set-dapp-access-permissions": "Set DApp access permissions",
   "set-max": "Set max",
   "set-nickname-toast": "You have renamed {{primary-name}} as {{nickname}}",
+  "set-spending-cap-of": "Set spending cap of",
   "set-up-sync": "Set up sync",
   "settings": "Settings",
   "setup-group-chat": "Setup group chat",
@@ -2285,6 +2288,8 @@
   "specify-network-id": "Specify network id",
   "specify-server-public-key": "Enter server public key",
   "specify-symbol": "Specify a symbol",
+  "spender-contract": "Spender contract",
+  "spending-cap": "Spending cap",
   "start-chat": "Start chat",
   "start-conversation": "Start conversation",
   "start-group-chat": "Start group chat",
