WalletConnect no internet edge-cases (#20826)
* feat: only initialize wc if internet online

* feat: no internet toast for session establishment

* feat: no internet banner on session requests

* feat: reloading walletconnect on connection change

* fix: re-initialize only when previously failed to

* fix: removed legacy net-info ns

* ref: renamed :network-status to :network/status

* ref: moved network subs to own "category"

* fix: device network fx args

* fix: tests & showing persisted dapps when offline

* fix: addressed review comments

* fix: rebase issues

* fix: linting

* fix: usage of web3-wallet (#20864)

* fix: moved networks to contextx and renaming

* ref: moved building supported namespaces into fx

--- a/translations/en.json
+++ b/translations/en.json
@@ -2632,6 +2632,7 @@
   "wallet-connect-go-back": "Go back to your browser or dapp",
   "wallet-connect-label": "WalletConnect",
   "wallet-connect-networks-not-supported": "{{dapp}} requires an unsupported network.",
+  "wallet-connect-no-internet-warning": "Oops, you have no internet. Try again later!",
   "wallet-connect-proposal-description": "By connecting you allow {{name}} to retrieve your account address and enable Web3",
   "wallet-connect-proposal-title": "Would like to connect with your wallet",
   "wallet-connect-qr-expired": "WalletConnect QR has expired",
